[package]
name = "esodiff"
version = "0.0.1"
edition = "2021"
authors = ["Jacob Allen Morris"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
libflate = "1.3.0"
reqwest = { version = "0.11.17", features = ["blocking"] }
tar = "0.4.38"
